--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,13 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/three": "^0.173.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
