--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
