--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         images: ghcr.io/${{ github.repository }}
         tags: | # tag with commit hash and with 'latest'
           type=sha 
-          type=raw,value=latest,enable={{is_default_branch}}
+          type=raw,value=latest
     
     # build and push our image, using output from previous step
     - name: Build and push Docker image
